--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body {
     font-family: "Open Sans", serif;
     line-height: 1.5;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 500;
     color: var(--white);
     background-color: var(--dark-gray);
@@ -126,12 +126,63 @@ button, a {
 }
 
 .order__prev {
+    border-radius: var(--border-radius) 0 0 0;
 }
 
 .order__cur {
 }
 
 .order__next {
+    border-radius: 0 var(--border-radius) 0 0;
+}
+
+.order__body {
+    display: grid;
+    gap: var(--gap);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+
+    grid-column: span 3 / span 3;
+    grid-row: span 10 / span 10;
+}
+
+.order__info {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    align-items: center;
+
+    padding: var(--large-gap);
+    background: var(--light-gray);
+
+    grid-column: span 3 / span 3;
+    grid-row: span 1 / span 1;
+}
+
+.order__info p:last-child {
+    text-align: end;
+}
+
+.order__list {
+    display: grid;
+    gap: var(--gap);
+
+    grid-column: span 3 / span 3;
+    grid-row: span 9 / span 9;
+    grid-row-start: 2;
+}
+
+.order__item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: var(--large-gap);
+    gap: var(--large-gap);
+    height: 100%;
+
+    grid-column: span 3 / span 3;
+    grid-row: span 1 / span 1;
+    /* background-color: aquamarine; */
 }
 
 /* ================================ */
@@ -139,9 +190,47 @@ button, a {
 /* ================================ */
 
 .category {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(11, 1fr);
+    gap: var(--gap);
+
     grid-column: span 2 / span 2;
     grid-row: span 11 / span 11;
     grid-column-start: 4;
+}
+
+.category__title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-column: span 2 / span 2;
+    background: var(--light-gray);
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+}
+
+.category__list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(5, 1fr);
+
+    grid-column: span 2 / span 2;
+    grid-row: span 10 / span 10;
+    gap: var(--gap);
+}
+
+.category__item {
+}
+
+.category__item:last-child .category__button {
+    border-radius: 0 0 var(--border-radius) 0;
+}
+
+.category__item:nth-last-child(2) .category__button {
+    border-radius: 0 0 0 var(--border-radius);
+}
+
+.category__button {
 }
 
 /* =============================== */
@@ -149,7 +238,90 @@ button, a {
 /* =============================== */
 
 .menu {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(11, 1fr);
+    gap: var(--gap);
+
     grid-column: span 3 / span 3;
     grid-row: span 11 / span 11;
     grid-column-start: 6;
+}
+
+.menu__title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-column: span 3 / span 3;
+    background: var(--light-gray);
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+}
+
+.menu__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+
+    grid-column: span 3 / span 3;
+    grid-row: span 10 / span 10;
+    gap: var(--gap);
+}
+
+.menu__item {
+
+}
+
+.menu__item:last-child .menu__button {
+    border-radius: 0 0 var(--border-radius) 0;
+}
+
+.menu__item:nth-last-child(3) .menu__button {
+    border-radius: 0 0 0 var(--border-radius);
+}
+
+
+.menu__button {
+    display: flex;
+    flex-direction: column;
+    gap: var(--large-gap);
+}
+
+.menu__button span {
+    color: #dedede;
+}
+
+/* ============================== */
+/* ============================== */
+/* ============================== */
+
+
+
+/* ============================== */
+/* ============================== */
+/* ============================== */
+
+.footer {
+    grid-column: span 8 / span 8;
+    grid-row-start: 13;
+}
+
+.footer__list {
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr 3fr;
+    gap: var(--large-gap);
+    height: 100%;
+}
+
+.footer__item button,
+.footer__item a {
+    border-radius: var(--border-radius);
+}
+
+.footer__payment {
+}
+.footer__discount {
+}
+.footer__code {
+}
+.footer__save {
 }
